# sweng-894-capstone

./: .gitignore  README.md  eslint.config.js  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
docs/: README.md  requirement.md  userstory.md
docs/architecture/: TestAutomation.md
docs/architecture/md/: 1-document.md  2-system.md  2.1-goals.md  2.2-context.md  2.3-functions.md  2.4-qa-req.md  2.5-constraints.md  2.6-concerns.md  2.7-drivers.md  3-domain.md  3.1-pduc.md  3.2-concept-classes.md  3.3-init-domain-model.md  3.4-sys-contract-input-ops.md  3.5-activity.md  3.6-diagram.md  4-viewpoints.md  4.1-logical.md  4.2-process.md  4.3-development.md  4.4-physical.md  4.5-scenarios.md  5-views.md  6-mapping.md  7-rationale.md  algorithm.md
docs/assessments/: conops.md
docs/images/: arch.drawio  classy.drawio  flow-images.drawio  infer-flow.drawio  use-case.drawio
python/: color.ipynb  example.py  models.ipynb  onnx.ipynb  test.ipynb  yolo11.ipynb
python/tests/: test_example.py
src/: App.svelte  app.css  main.test.ts  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  model.rs  model2.rs
src/api/: mealdb.ts
src/components/: Bbox.svelte  Button.svelte  Button.test.ts  Colors.svelte  Counter.svelte  EditableField.svelte  Icon.svelte  Menu.svelte  SearchBox.svelte  ThresholdSlider.svelte  index.ts
src/constants/: buttons.test.ts  buttons.ts  icons.test.ts  icons.ts  index.ts  panels.ts
src/constants/themealdb/: all_meals.json  areas.json  getallmeals.py  ingredient_counts.csv  ingredients.json  ingredientscnt.py  recipes.json
src/layouts/: ActivityBar.svelte  Body.svelte  BottomPanel.svelte  LeftPanel.svelte  RightPanel.svelte  StatusBar.svelte  StatusBar.test.ts  TitleBar.svelte  ViewContainer.svelte  index.ts
src/lib/: Counter.svelte  PluginHTTP.svelte  PluginNotification.svelte  PluginOS.svelte  PluginOpener.svelte  PluginStore.svelte
src/panels/: PanelBlank.svelte  index.ts
src/panels/bottom/: PanelBottom.svelte
src/panels/left/: PanelLeft1.svelte  PanelLeft2.svelte
src/plugins/: PluginFS.svelte  PluginFS2.svelte  PluginHTTP.svelte  PluginNotification.svelte  PluginOS.svelte  PluginOpener.svelte  PluginStore.svelte  PluginWebRTC.svelte  index.ts
src/screens/: Home.svelte  Recipes.svelte  index.ts
src/store/: api.ts  appSlice.test.ts  appSlice.ts  index.ts  store.ts
src/testing/: CameraView.test.ts  HomeView.test.ts  LibraryView.test.ts  ResultView.test.ts  ViewContainer.test.ts
src/themes/: theme.css  themeSet.ts
src/views/: CameraView.svelte  DetailsView.svelte  FavoritesView.svelte  HistoryView.svelte  HomeView.svelte  HttpView.svelte  LibraryView.svelte  MatchesView.svelte  RecipeView.svelte  ResultView.svelte  ResultsView.svelte  SettingsView.svelte  index.ts
(+1 files in other folders)
