[project]
name = "classi-cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "onnx>=1.12.0,<1.18.0",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.53",
    "openai-clip>=1.0.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.145",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
