[package]
name = "Classifi-Cam"
version = "0.1.11"
description = "An AI app to classify your images"
authors = ["Gerry Wagner", "Tom Smiley", "Victoria Reyna"]
license = "MIT"
repository = "https://github.com/glwagnerii/sweng-894-capstone"
edition = "2021"
rust-version = "1.77.2"
include = ["resources/**/*"]

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
image = "0.25"
arcstr = "1.2.0"
serde_yaml = "0.9.34"
ndarray = "0.16.1"
anyhow = "1.0"
# ort = { version = "2.0.0-rc.10", features = [ "cuda", "coreml", "tensorrt", "directml" ] }
ort = "2.0.0-rc.10"
once_cell = "1.21.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
